Projetos/ACBrFramework/jACBrFramework/ACBrFramework_JNI/include/ACBrPAF.h

#define ACBr

typedef char BOOL;


// Tipos de dados

typedef struct
{
	char BOMBA[4];
	char BICO[4];
	double DATA;
	double HORA;
	char MOTIVO[51];
	char CNPJ_EMPRESA[15];
	char CPF_TECNICO[12];
	char NRO_LACRE_ANTES[16];
	char NRO_LACRE_APOS[16];
	double ENCERRANTE_ANTES;
	double ENCERRANTE_APOS;
	BOOL RegistroValido;
} RegistroB2Rec;


typedef struct
{
	char ID_ABASTECIMENTO[16];
	char TANQUE[4];
	char BOMBA[4];
	char BICO[4];
	char COMBUSTIVEL[21];
	double DATA_ABASTECIMENTO;
	double HORA_ABASTECIMENTO;
	double ENCERRANTE_INICIAL;
	double ENCERRANTE_FINAL;
	char STATUS_ABASTECIMENTO[11];
	char NRO_SERIE_ECF[15];
	double DATA;
	double HORA;
	int COO;
	int NRO_NOTA_FISCAL;
	double VOLUME;
	BOOL RegistroValido;
} RegistroC2Rec;


typedef struct
{
	int QTD_D3;
	char NUM_FAB[21];
	char MF_ADICIONAL[2];
	char TIPO_ECF[8];
	char MARCA_ECF[21];
	char MODELO_ECF[21];
	char COO[7];
	char NUM_DAV[14];
	double DT_DAV;
	char TIT_DAV[31];
	double VLT_DAV;
	char COO_DFV[7];
	char NUMERO_ECF[4];
	char NOME_CLIENTE[41];
	char CPF_CNPJ[15];
	BOOL RegistroValido;
} RegistroD2Rec;


typedef struct
{
	double DT_INCLUSAO;
	int NUM_ITEM;
	char COD_ITEM[15];
	char DESC_ITEM[101];
	double QTDE_ITEM;
	char UNI_ITEM[4];
	double VL_UNIT;
	double VL_DESCTO;
	double VL_ACRES;
	double VL_TOTAL;
	int DEC_VL_UNIT;
	int DEC_QTDE_ITEM;
	char SIT_TRIB[2];
	double ALIQ;
	char IND_CANC[2];
	BOOL RegistroValido;
} RegistroD3Rec;


typedef struct
{
	char COD_MERC[15];
	char DESC_MERC[51];
	char UN_MED[7];
	double QTDE_EST;
	BOOL RegistroValido;
} RegistroE2Rec;


typedef struct
{
	char CNPJ_CRED_CARTAO[15];
	int COO;
	int CCF;
	double VLR_TROCO;
	double DT_TROCO;
	char CPF[15];
	char Titulo[8];
	BOOL RegistroValido;
} RegistroH2Rec;


typedef struct
{
	char RAZAOSOCIAL[51];
	char UF[3];
	char CNPJ[15];
	char IE[15];
	char IM[15];
} RegistroHD1Rec;


typedef struct
{
	char RAZAOSOCIAL[51];
	char UF[3];
	char CNPJ[15];
	char IE[15];
	char IM[15];
	char NUM_FAB[21];
	char MF_ADICIONAL[2];
	char TIPO_ECF[8];
	char MARCA_ECF[21];
	char MODELO_ECF[21];
	double DT_EST;
	BOOL RegistroValido;
	BOOL InclusaoExclusao;
} RegistroHD2Rec;


typedef struct
{
	int QTD_N3;
	char LAUDO[11];
	char NOME[51];
	char VERSAO[11];
} RegistroN2Rec;


typedef struct
{
	char NOME_ARQUIVO[51];
	char MD5[33];
} RegistroN3Rec;


typedef struct
{
	char COD_MERC_SERV[15];
	char DESC_MERC_SERV[51];
	char UN_MED[7];
	char IAT[2];
	char IPPT[2];
	char ST[2];
	double ALIQ;
	double VL_UNIT;
	BOOL RegistroValido;
} RegistroP2Rec;


typedef struct
{
	char NUM_FAB[21];
	char MF_ADICIONAL[2];
	char TIPO_ECF[8];
	char MARCA_ECF[16];
	char MODELO_ECF[21];
	char VERSAO_SB[11];
	double DT_INST_SB;
	double HR_INST_SB;
	int NUM_SEQ_ECF;
	char CNPJ[15];
	char IE[15];
	char CNPJ_SH[15];
	char IE_SH[15];
	char IM_SH[15];
	char NOME_SH[41];
	char NOME_PAF[41];
	char VER_PAF[11];
	char COD_MD5[33];
	double DT_INI;
	double DT_FIN;
	char ER_PAF_ECF[5];
	BOOL InclusaoExclusao;
	BOOL RegistroValido;
} RegistroR1Rec;


typedef struct
{
	int QTD_R3;
	int NUM_USU;
	int CRZ;
	int COO;
	int CRO;
	double DT_MOV;
	double DT_EMI;
	double HR_EMI;
	double VL_VBD;
	char PAR_ECF[2];
	double DT_FIN;
	BOOL RegistroValido;
} RegistroR2Rec;