Projetos/ACBrFramework/ACBrFramework.Net/ACBrFramework.Net/ACBrPAF/ACBrPAFInterop.cs

using System;
using System.Runtime.InteropServices;
using System.Text;

namespace ACBrFramework.Net
{
	public static class ACBrPAFInterop
	{
		#region DLL

#if x86
		private const string ACBr = "ACBrFramework32.dll";
#elif x64
				private const string ACBr = "ACBrFramework64.dll";
#endif

		#endregion DLL

		#region ACBrPAF

		#region Interop Types

		[StructLayout(LayoutKind.Sequential)]
		public struct RegistroHD1Rec
		{
			[MarshalAs(UnmanagedType.ByValTStr, SizeConst = 51)]
			public string RAZAOSOCIAL;

			[MarshalAs(UnmanagedType.ByValTStr, SizeConst = 3)]
			public string UF;

			[MarshalAs(UnmanagedType.ByValTStr, SizeConst = 15)]
			public string CNPJ;

			[MarshalAs(UnmanagedType.ByValTStr, SizeConst = 15)]
			public string IE;

			[MarshalAs(UnmanagedType.ByValTStr, SizeConst = 15)]
			public string IM;
		}

		[StructLayout(LayoutKind.Sequential)]
		public struct RegistroHD2Rec
		{
			[MarshalAs(UnmanagedType.ByValTStr, SizeConst = 51)]
			public string RAZAOSOCIAL;

			[MarshalAs(UnmanagedType.ByValTStr, SizeConst = 3)]
			public string UF;

			[MarshalAs(UnmanagedType.ByValTStr, SizeConst = 15)]
			public string CNPJ;

			[MarshalAs(UnmanagedType.ByValTStr, SizeConst = 15)]
			public string IE;

			[MarshalAs(UnmanagedType.ByValTStr, SizeConst = 15)]
			public string IM;

			[MarshalAs(UnmanagedType.ByValTStr, SizeConst = 21)]
			public string NUM_FAB;

			[MarshalAs(UnmanagedType.ByValTStr, SizeConst = 2)]
			public string MF_ADICIONAL;

			[MarshalAs(UnmanagedType.ByValTStr, SizeConst = 8)]
			public string TIPO_ECF;

			[MarshalAs(UnmanagedType.ByValTStr, SizeConst = 21)]
			public string MARCA_ECF;

			[MarshalAs(UnmanagedType.ByValTStr, SizeConst = 21)]
			public string MODELO_ECF;

			[MarshalAs(UnmanagedType.R8)]
			public double DT_EST;

			[MarshalAs(UnmanagedType.U1)]
			public bool RegistroValido;

			[MarshalAs(UnmanagedType.U1)]
			public bool InclusaoExclusao;
		}

		[StructLayout(LayoutKind.Sequential)]
		public struct RegistroB2Rec
		{
			[MarshalAs(UnmanagedType.ByValTStr, SizeConst = 4)]
			public string BOMBA;

			[MarshalAs(UnmanagedType.ByValTStr, SizeConst = 4)]
			public string BICO;

			[MarshalAs(UnmanagedType.R8)]
			public double DATA;

			[MarshalAs(UnmanagedType.R8)]
			public double HORA;

			[MarshalAs(UnmanagedType.ByValTStr, SizeConst = 51)]
			public string MOTIVO;

			[MarshalAs(UnmanagedType.ByValTStr, SizeConst = 15)]
			public string CNPJ_EMPRESA;

			[MarshalAs(UnmanagedType.ByValTStr, SizeConst = 12)]
			public string CPF_TECNICO;

			[MarshalAs(UnmanagedType.ByValTStr, SizeConst = 16)]
			public string NRO_LACRE_ANTES;

			[MarshalAs(UnmanagedType.ByValTStr, SizeConst = 16)]
			public string NRO_LACRE_APOS;

			[MarshalAs(UnmanagedType.R8)]
			public double ENCERRANTE_ANTES;

			[MarshalAs(UnmanagedType.R8)]
			public double ENCERRANTE_APOS;

			[MarshalAs(UnmanagedType.U1)]
			public bool RegistroValido;
		}

		[StructLayout(LayoutKind.Sequential)]
		public struct RegistroC2Rec
		{
			[MarshalAs(UnmanagedType.ByValTStr, SizeConst = 16)]
			public string ID_ABASTECIMENTO;

			[MarshalAs(UnmanagedType.ByValTStr, SizeConst = 4)]
			public string TANQUE;

			[MarshalAs(UnmanagedType.ByValTStr, SizeConst = 4)]
			public string BOMBA;

			[MarshalAs(UnmanagedType.ByValTStr, SizeConst = 4)]
			public string BICO;

			[MarshalAs(UnmanagedType.ByValTStr, SizeConst = 21)]
			public string COMBUSTIVEL;

			[MarshalAs(UnmanagedType.R8)]
			public double DATA_ABASTECIMENTO;

			[MarshalAs(UnmanagedType.R8)]
			public double HORA_ABASTECIMENTO;

			[MarshalAs(UnmanagedType.R8)]
			public double ENCERRANTE_INICIAL;

			[MarshalAs(UnmanagedType.R8)]
			public double ENCERRANTE_FINAL;

			[MarshalAs(UnmanagedType.ByValTStr, SizeConst = 11)]
			public string STATUS_ABASTECIMENTO;

			[MarshalAs(UnmanagedType.ByValTStr, SizeConst = 15)]
			public string NRO_SERIE_ECF;

			[MarshalAs(UnmanagedType.R8)]
			public double DATA;

			[MarshalAs(UnmanagedType.R8)]
			public double HORA;

			[MarshalAs(UnmanagedType.I4)]
			public int COO;

			[MarshalAs(UnmanagedType.I4)]
			public int NRO_NOTA_FISCAL;

			[MarshalAs(UnmanagedType.R8)]
			public double VOLUME;

			[MarshalAs(UnmanagedType.U1)]
			public bool RegistroValido;
		}

		[StructLayout(LayoutKind.Sequential)]
		public struct RegistroD2Rec
		{
			[MarshalAs(UnmanagedType.I4)]
			public int QTD_D3;

			[MarshalAs(UnmanagedType.ByValTStr, SizeConst = 21)]
			public string NUM_FAB;

			[MarshalAs(UnmanagedType.ByValTStr, SizeConst = 2)]
			public string MF_ADICIONAL;

			[MarshalAs(UnmanagedType.ByValTStr, SizeConst = 8)]
			public string TIPO_ECF;

			[MarshalAs(UnmanagedType.ByValTStr, SizeConst = 21)]
			public string MARCA_ECF;

			[MarshalAs(UnmanagedType.ByValTStr, SizeConst = 21)]
			public string MODELO_ECF;

			[MarshalAs(UnmanagedType.ByValTStr, SizeConst = 7)]
			public string COO;

			[MarshalAs(UnmanagedType.ByValTStr, SizeConst = 14)]
			public string NUM_DAV;

			[MarshalAs(UnmanagedType.R8)]
			public double DT_DAV;

			[MarshalAs(UnmanagedType.ByValTStr, SizeConst = 31)]
			public string TIT_DAV;

			[MarshalAs(UnmanagedType.R8)]
			public double VLT_DAV;

			[MarshalAs(UnmanagedType.ByValTStr, SizeConst = 7)]
			public string COO_DFV;

			[MarshalAs(UnmanagedType.ByValTStr, SizeConst = 4)]
			public string NUMERO_ECF;

			[MarshalAs(UnmanagedType.ByValTStr, SizeConst = 41)]
			public string NOME_CLIENTE;

			[MarshalAs(UnmanagedType.ByValTStr, SizeConst = 15)]
			public string CPF_CNPJ;

			[MarshalAs(UnmanagedType.U1)]
			public bool RegistroValido;
		}

		[StructLayout(LayoutKind.Sequential)]
		public struct RegistroD3Rec
		{
			[MarshalAs(UnmanagedType.R8)]
			public double DT_INCLUSAO;

			[MarshalAs(UnmanagedType.I4)]
			public int NUM_ITEM;

			[MarshalAs(UnmanagedType.ByValTStr, SizeConst = 15)]
			public string COD_ITEM;

			[MarshalAs(UnmanagedType.ByValTStr, SizeConst = 101)]
			public string DESC_ITEM;

			[MarshalAs(UnmanagedType.R8)]
			public double QTDE_ITEM;

			[MarshalAs(UnmanagedType.ByValTStr, SizeConst = 4)]
			public string UNI_ITEM;

			[MarshalAs(UnmanagedType.R8)]
			public double VL_UNIT;

			[MarshalAs(UnmanagedType.R8)]
			public double VL_DESCTO;

			[MarshalAs(UnmanagedType.R8)]
			public double VL_ACRES;

			[MarshalAs(UnmanagedType.R8)]
			public double VL_TOTAL;

			[MarshalAs(UnmanagedType.I4)]
			public int DEC_VL_UNIT;

			[MarshalAs(UnmanagedType.I4)]
			public int DEC_QTDE_ITEM;

			[MarshalAs(UnmanagedType.ByValTStr, SizeConst = 2)]
			public string SIT_TRIB;

			[MarshalAs(UnmanagedType.R8)]
			public double ALIQ;

			[MarshalAs(UnmanagedType.ByValTStr, SizeConst = 2)]
			public string IND_CANC;

			[MarshalAs(UnmanagedType.U1)]
			public bool RegistroValido;
		}

		[StructLayout(LayoutKind.Sequential)]
		public struct RegistroE2Rec
		{
			[MarshalAs(UnmanagedType.ByValTStr, SizeConst = 15)]
			public string COD_MERC;

			[MarshalAs(UnmanagedType.ByValTStr, SizeConst = 51)]
			public string DESC_MERC;

			[MarshalAs(UnmanagedType.ByValTStr, SizeConst = 7)]
			public string UN_MED;

			[MarshalAs(UnmanagedType.R8)]
			public double QTDE_EST;

			[MarshalAs(UnmanagedType.U1)]
			public bool RegistroValido;
		}

		[StructLayout(LayoutKind.Sequential)]
		public struct RegistroH2Rec
		{
			[MarshalAs(UnmanagedType.ByValTStr, SizeConst = 15)]
			public string CNPJ_CRED_CARTAO;

			[MarshalAs(UnmanagedType.I4)]
			public int COO;

			[MarshalAs(UnmanagedType.I4)]
			public int CCF;

			[MarshalAs(UnmanagedType.R8)]
			public double VLR_TROCO;

			[MarshalAs(UnmanagedType.R8)]
			public double DT_TROCO;

			[MarshalAs(UnmanagedType.ByValTStr, SizeConst = 15)]
			public string CPF;

			[MarshalAs(UnmanagedType.ByValTStr, SizeConst = 8)]
			public string Titulo;

			[MarshalAs(UnmanagedType.U1)]
			public bool RegistroValido;
		}

		[StructLayout(LayoutKind.Sequential)]
		public struct RegistroN2Rec
		{
			[MarshalAs(UnmanagedType.I4)]
			public int QTD_N3;

			[MarshalAs(UnmanagedType.ByValTStr, SizeConst = 11)]
			public string LAUDO;

			[MarshalAs(UnmanagedType.ByValTStr, SizeConst = 51)]
			public string NOME;

			[MarshalAs(UnmanagedType.ByValTStr, SizeConst = 11)]
			public string VERSAO;
		}

		[StructLayout(LayoutKind.Sequential)]
		public struct RegistroN3Rec
		{
			[MarshalAs(UnmanagedType.ByValTStr, SizeConst = 51)]
			public string NOME_ARQUIVO;

			[MarshalAs(UnmanagedType.ByValTStr, SizeConst = 33)]
			public string MD5;
		}

		[StructLayout(LayoutKind.Sequential)]
		public struct RegistroP2Rec
		{
			[MarshalAs(UnmanagedType.ByValTStr, SizeConst = 15)]
			public string COD_MERC_SERV;

			[MarshalAs(UnmanagedType.ByValTStr, SizeConst = 51)]
			public string DESC_MERC_SERV;

			[MarshalAs(UnmanagedType.ByValTStr, SizeConst = 7)]
			public string UN_MED;

			[MarshalAs(UnmanagedType.ByValTStr, SizeConst = 2)]
			public string IAT;

			[MarshalAs(UnmanagedType.ByValTStr, SizeConst = 2)]
			public string IPPT;

			[MarshalAs(UnmanagedType.ByValTStr, SizeConst = 2)]
			public string ST;

			[MarshalAs(UnmanagedType.R8)]
			public double ALIQ;

			[MarshalAs(UnmanagedType.R8)]
			public double VL_UNIT;

			[MarshalAs(UnmanagedType.U1)]
			public bool RegistroValido;
		}

		[StructLayout(LayoutKind.Sequential)]
		public struct RegistroR1Rec
		{
			[MarshalAs(UnmanagedType.ByValTStr, SizeConst = 21)]
			public string NUM_FAB;

			[MarshalAs(UnmanagedType.ByValTStr, SizeConst = 2)]
			public string MF_ADICIONAL;

			[MarshalAs(UnmanagedType.ByValTStr, SizeConst = 8)]
			public string TIPO_ECF;

			[MarshalAs(UnmanagedType.ByValTStr, SizeConst = 16)]
			public string MARCA_ECF;

			[MarshalAs(UnmanagedType.ByValTStr, SizeConst = 21)]
			public string MODELO_ECF;

			[MarshalAs(UnmanagedType.ByValTStr, SizeConst = 11)]
			public string VERSAO_SB;

			[MarshalAs(UnmanagedType.R8)]
			public double DT_INST_SB;

			[MarshalAs(UnmanagedType.R8)]
			public double HR_INST_SB;

			[MarshalAs(UnmanagedType.I4)]
			public int NUM_SEQ_ECF;

			[MarshalAs(UnmanagedType.ByValTStr, SizeConst = 15)]
			public string CNPJ;

			[MarshalAs(UnmanagedType.ByValTStr, SizeConst = 15)]
			public string IE;

			[MarshalAs(UnmanagedType.ByValTStr, SizeConst = 15)]
			public string CNPJ_SH;

			[MarshalAs(UnmanagedType.ByValTStr, SizeConst = 15)]
			public string IE_SH;

			[MarshalAs(UnmanagedType.ByValTStr, SizeConst = 15)]
			public string IM_SH;

			[MarshalAs(UnmanagedType.ByValTStr, SizeConst = 41)]
			public string NOME_SH;

			[MarshalAs(UnmanagedType.ByValTStr, SizeConst = 41)]
			public string NOME_PAF;

			[MarshalAs(UnmanagedType.ByValTStr, SizeConst = 11)]
			public string VER_PAF;

			[MarshalAs(UnmanagedType.ByValTStr, SizeConst = 33)]
			public string COD_MD5;

			[MarshalAs(UnmanagedType.R8)]
			public double DT_INI;

			[MarshalAs(UnmanagedType.R8)]
			public double DT_FIN;

			[MarshalAs(UnmanagedType.ByValTStr, SizeConst = 5)]
			public string ER_PAF_ECF;

			[MarshalAs(UnmanagedType.U1)]
			public Boolean InclusaoExclusao;

			[MarshalAs(UnmanagedType.U1)]
			public Boolean RegistroValido;
		}

		[StructLayout(LayoutKind.Sequential)]
		public struct RegistroR2Rec
		{
			[MarshalAs(UnmanagedType.I4)]
			public int QTD_R3;

			[MarshalAs(UnmanagedType.I4)]
			public int NUM_USU;

			[MarshalAs(UnmanagedType.I4)]
			public int CRZ;

			[MarshalAs(UnmanagedType.I4)]
			public int COO;

			[MarshalAs(UnmanagedType.I4)]
			public int CRO;

			[MarshalAs(UnmanagedType.R8)]
			public double DT_MOV;

			[MarshalAs(UnmanagedType.R8)]
			public double DT_EMI;
